--- a/.fontschampa.yaml
+++ b/.fontschampa.yaml
@@ -5,7 +5,14 @@ font:
 
   - file: 'fonts/Roboto-Regular.ttf'
     id: font_spazza
-    size: 33    
+    size: 33
+    glyphs:
+      ['&', '@', '!', ',', '.', '"', '%', '’','(', ')', '+', '-', '_', ':', '°', '0',
+       '1', '2', '3', '4', '5', '6', '7', '8', '9', 'A', 'B', 'C', 'D', 'E',
+       'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S',
+       'T', 'U', 'V', 'W', 'X', 'Y', 'Z', ' ', 'a', 'b', 'c', 'd', 'e', 'f',
+       'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't',
+       'u', 'v', 'w', 'x', 'y', 'z','/','º','µ','³','ò','ó','à','á','ì','í','ù','ú','œ','ö','æ','ü','ô','è','é']  
 
   - file: 'fonts/Roboto-Bold.ttf'
     id: font_bold
