--- a/.sensors.yaml
+++ b/.sensors.yaml
@@ -17,9 +17,6 @@ sensor:
   - platform: homeassistant
     entity_id: sensor.kitchen_temperature
     id: kitchen_temp
-    on_value:
-      then:
-        - lambda: 'id(data_updated) = true;'
   - platform: homeassistant
     entity_id: sensor.kitchen_humidity
     id: kitchen_hum
@@ -36,9 +33,6 @@ sensor:
   - platform: homeassistant
     entity_id: sensor.master_bedroom_temperature
     id: mastbed_temp
-    on_value:
-      then:
-        - lambda: 'id(data_updated) = true;'
   - platform: homeassistant
     entity_id: sensor.master_bedroom_humidity
     id: mastbed_hum    
@@ -47,9 +41,6 @@ sensor:
   - platform: homeassistant
     entity_id: sensor.guest_bedroom_temperature
     id: guestbed_temp
-    on_value:
-      then:
-        - lambda: 'id(data_updated) = true;'
   - platform: homeassistant
     entity_id: sensor.guest_bedroom_humidity
     id: guestbed_hum  
@@ -66,9 +57,6 @@ sensor:
   - platform: homeassistant
     entity_id: sensor.lg_studio_temperature
     id: lgstudio_temp
-    on_value:
-      then:
-      - lambda: 'id(data_updated) = true;'
   - platform: homeassistant
     entity_id: sensor.lg_studio_humidity
     id: lgstudio_hum  
@@ -77,9 +65,6 @@ sensor:
   - platform: homeassistant
     entity_id: sensor.temp_attic_temperature
     id: attic_temp
-    on_value:
-      then:
-        - lambda: 'id(data_updated) = true;'
   - platform: homeassistant
     entity_id: sensor.temp_attic_humidity
     id: attic_hum
@@ -88,9 +73,6 @@ sensor:
   - platform: homeassistant
     entity_id: sensor.temp_server_temperature
     id: server_temp
-    on_value:
-      then:
-      - lambda: 'id(data_updated) = true;'
   - platform: homeassistant
     entity_id: sensor.temp_server_humidity
     id: server_hum
@@ -102,9 +84,6 @@ sensor:
   - platform: homeassistant
     entity_id: sensor.openweathermap_temperature
     id: tempnow
-    on_value:
-      then:
-        - lambda: 'id(data_updated) = true;'
 
   - platform: homeassistant
     entity_id: sensor.sun_next_rising
@@ -116,31 +95,65 @@ sensor:
 
   - platform: homeassistant
     entity_id: sensor.grange_thunderstorm_probability_day_0d
+    #on_value:
+    #  then:
+    #    - lambda: 'id(data_updated) = true;'
     id: stormd0
   - platform: homeassistant
     entity_id: sensor.grange_thunderstorm_probability_day_1d
+    #on_value:
+    #  then:
+    #    - lambda: 'id(data_updated) = true;'    
     id: stormd1
   - platform: homeassistant
     entity_id: sensor.grange_thunderstorm_probability_day_2d
+    #on_value:
+    #  then:
+    #    - lambda: 'id(data_updated) = true;'    
     id: stormd2
+    
+    #Forecast
+  - platform: homeassistant
+    entity_id: sensor.grange_realfeel_temperature_max_1d
+    id: foreneomax1
+  - platform: homeassistant
+    entity_id: sensor.grange_realfeel_temperature_min_1d
+    id: foreneomin1
+  - platform: homeassistant
+    entity_id: sensor.grange_wind_day_1d
+    id: foreneowind1
 
-  # Create sensors for monitoring cartaccia remotely.
-  - platform: template
-    name: "Carta - Display Last Update"
-    device_class: timestamp
-    entity_category: "diagnostic"
-    id: display_last_update    
+  - platform: homeassistant
+    entity_id: sensor.grange_realfeel_temperature_max_2d
+    id: foreneomax2
+  - platform: homeassistant
+    entity_id: sensor.grange_realfeel_temperature_min_2d
+    id: foreneomin2
+  - platform: homeassistant
+    entity_id: sensor.grange_wind_day_2d
+    id: foreneowind2
 
 text_sensor:
   - platform: homeassistant
-    entity_id: weather.grange_2
+    entity_id: weather.grange
     id: weathernow
 
+  #- platform: homeassistant
+  #  entity_id: weather.grange
+  #  attribute: forecast
+  #  id: accuweatherfore
+  #  internal: yes
+
   - platform: homeassistant
-    entity_id: weather.grange_2
-    attribute: forecast
-    id: accuweatherfore
-    internal: yes
+    entity_id: sensor.accuweather_condition_kyou
+    id: accucond1
+  - platform: homeassistant
+    entity_id: sensor.accuweather_condition_ashita
+    id: accucond2
+  - platform: homeassistant
+    entity_id: sensor.accuweather_condition_asatte
+    id: accucond3
+
 
   - platform: sun
     type: sunrise
